<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/screen"
        android:orientation="vertical"
        tools:context="com.lyranetwork.demo.payapp.Activity.MainActivity">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/header" />

            <ImageButton
                android:id="@+id/imageButtonLang"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="right"
                android:background="@drawable/unitedkingdom"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/unitedkingdom" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:layout_editor_absoluteY="239dp">

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="5dp"
                android:background="@android:color/background_light"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/g3379" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/editTextAmount"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:backgroundTint="@color/bluelyra"
                        android:imeOptions="actionNext"
                        android:ems="10"
                        android:maxLength="10"
                        android:inputType="number"
                        android:textColor="@color/bluelyradark2"
                        android:textCursorDrawable="@null"
                        tools:text="(50 euros max)" />
                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="5dp"
                android:background="@android:color/background_light"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/envelope" />

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/bluelyra"
                    android:nextFocusDown="@id/paymentTypeSpinner"
                    android:imeOptions="actionDone"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/bluelyradark2"
                    android:textCursorDrawable="@null"
                    tools:text="Your email" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="5dp"
                android:background="@android:color/background_light"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/paymentTypeSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:entries="@array/payment_type_mode" />

            </LinearLayout>

            <Button
                android:id="@+id/paybutton"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@android:color/background_light"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="10dp"
                android:text="@string/pay_with_payzen"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/bluelyradark2"
                android:textSize="24sp" />

            <LinearLayout
                android:id="@+id/switchLayout"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonTest"
                    android:layout_width="300dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:layout_weight="1"
                    android:buttonTint="@color/white"
                    android:text="@string/test"
                    android:textColor="@color/white"
                    android:textOff="@string/test"
                    android:textOn="@string/test" />

                <RadioButton
                    android:id="@+id/radioButtonProd"
                    android:layout_width="300dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:layout_weight="1"
                    android:buttonTint="@color/white"
                    android:text="PRODUCTION"
                    android:textColor="@color/white"
                    android:textOff="PRODUCTIONt"
                    android:textOn="PRODUCTIONt" />

                </RadioGroup>
                <!--
                <ToggleButton
                    android:id="@+id/toggleButtonModeTest"
                    android:layout_width="300dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/togglebackground"
                    android:clickable="false"
                    android:text="@string/test"
                    android:textColor="@color/bluelyradark2"
                    android:textOff="@string/test"
                    android:textOn="@string/test" />

                <ToggleButton
                    android:id="@+id/toggleButtonModeProduction"
                    android:layout_width="300dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/togglebackground"
                    android:clickable="false"
                    android:text="@string/production"
                    android:textColor="@color/bluelyradark2"
                    android:textOff="@string/production"
                    android:textOn="@string/production" />
                    -->
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textViewPoweredBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:gravity="center"
            android:text="@string/powered_by_lyra"
            android:textColor="@android:color/background_light" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#55FFFFFF"
        android:visibility="gone"
        android:gravity="center">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </RelativeLayout>
</FrameLayout>